fix(search): make search dialog easier to close
Whilst searching, the navbar is now hidden to prevent user attempting to
close dialog by clicking on navbar links. Otherwise, when clicking on an
in-page anchor link in navbar, the page content will not be reloaded and
will remain hidden underneath the dialog.

Fix #996

--- a/layouts/partials/css/academic.css
+++ b/layouts/partials/css/academic.css
@@ -274,7 +274,7 @@ small,
   transform: scale(1);
   -webkit-transform: scale(1);
   visibility: visible;
-  z-index: 11; /* Second highest index, after navbar. */
+  z-index: 1031; /* Highest index, higher than navbar. */
 }
 
 .searching #search-box #search-query {
